--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.50.0",
 		"lucide-svelte": "^0.522.0",
-		"openai": "^5.6.0"
+		"openai": "^5.6.0",
+		"pdf.js-extract": "^0.2.1"
 	}
 }
