--- a/package.json
+++ b/package.json
@@ -26,9 +26,15 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@langchain/anthropic": "^0.3.23",
+		"@langchain/community": "^0.3.47",
+		"@langchain/core": "^0.3.61",
+		"@langchain/google-genai": "^0.2.14",
+		"@langchain/openai": "^0.5.16",
 		"@supabase/supabase-js": "^2.50.0",
+		"axios": "^1.10.0",
 		"lucide-svelte": "^0.522.0",
-		"openai": "^5.6.0",
-		"pdf.js-extract": "^0.2.1"
+		"pdf.js-extract": "^0.2.1",
+		"socket.io-client": "^4.8.1"
 	}
 }
